kube2/kube1/cvat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: cvat
    app: cvat
  name: cvat
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cvat
      app: cvat
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/cvat: "true"
        io.kompose.service: cvat
        app: cvat
    spec:
      containers:
        - env:
            - name: ADAPTIVE_AUTO_ANNOTATION
              value: "false"
            - name: ALLOWED_HOSTS
              value: '*'
            - name: CVAT_POSTGRES_HOST
              value: "cvat-db.default"
            - name: CVAT_REDIS_HOST
              value: "cvat-redis.default"
            - name: DJANGO_MODWSGI_EXTRA_ARGS
            - name: no_proxy
              value: "elasticsearch,kibana,logstash,nuclio,opa"
          image: openvino/cvat_server
          name: cvat
          resources: {}
        - name: cvat-ui
          image: openvino/cvat_ui
          resources: {}
          #volumeMounts:
          #  - mountPath: /home/django/data/
          #   name: cvat-data
      restartPolicy: Always
      #   volumes:
      # - name: cvat-data
      #   persistentVolumeClaim:
      #     claimName: cvat-data
status: {}
