kube2/kube1/cvat-opa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: cvat-opa
  name: cvat-opa
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cvat-opa
  strategy:
    type: Recreate
  template:
      labels:
        io.kompose.network/cvat: "true"
        io.kompose.service: cvat-opa
    spec:
      containers:
        - args:
            - run
            - --server
            - --addr
            - :8181
            - --set=decision_logs.console=true
            - /rules
          image: openpolicyagent/opa:0.34.2-rootless
          name: cvat-opa
          ports:
            - containerPort: 8181
          volumeMounts:
            - mountPath: /rules
              name: cvat-opa-claim0
      restartPolicy: Always
      volumes:
        - name: cvat-opa-claim0
          persistentVolumeClaim:
            claimName: cvat-opa-claim0
status: {}
